fixes dog info gap

--- a/diego/src/DiegoApp/HomePage/HomePageStyle/homePageStyle.css
+++ b/diego/src/DiegoApp/HomePage/HomePageStyle/homePageStyle.css
@@ -288,7 +288,7 @@
   }
   
   .dog_info {
-    gap: 6px;
+    gap: 18px;
     margin: 0;
     padding: 0;
   }
